--- a/main.html
+++ b/main.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
-
 <html>
-
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
-</body>
-
+	<head>
+		<link rel="stylesheet" href="styles.css">
+	</head>
+	<body>
+		<nav>
+			<ul>
+				<li><a href="a">Home</a></li>
+				<li><a href="b">About us</a></li>
+				<li><a href="c">Contact us</a></li>
+			</ul>
+		</nav>
+		<h3>3 random videos</h3>
+		<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls></video>
+		<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" controls></video>
+		<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" controls></video>
+		<!-- the entire body must be written by student -->
+	    <script type="text/javascript" src="./script.js">
+	</script>
+	</body>
 </html>
