--- a/main.html
+++ b/main.html
@@ -12,9 +12,10 @@
 			</ul>
 		</nav>
 		<h3>3 random videos</h3>
-		<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls></video>
-		<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" controls></video>
-		<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" controls></video>
+		<video width="200" height="200" type="video/mp4" allowscriptaccess="always" allowfullscreen="true" src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls></video>
+		<video width="200" height="200" type="video/mp4" allowscriptaccess="always" allowfullscreen="true" src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" controls></video>
+		<video width="200" height="200" type="video/mp4" allowscriptaccess="always" allowfullscreen="true" src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" controls></video>
+		
 		<!-- the entire body must be written by student -->
 	    <script type="text/javascript" src="./script.js">
 	</script>
