--- a/main.html
+++ b/main.html
@@ -5,16 +5,22 @@
 	</head>
 	<body>
 		<nav>
-			<ul>
-				<li><a href="a">Home</a></li>
-				<li><a href="b">About us</a></li>
-				<li><a href="c">Contact us</a></li>
-			</ul>
-		</nav>
-		<h3>3 random videos</h3>
-		<video width="200" height="200" type="video/mp4" allowscriptaccess="always" allowfullscreen="true" src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls></video>
-		<video width="200" height="200" type="video/mp4" allowscriptaccess="always" allowfullscreen="true" src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" controls></video>
-		<video width="200" height="200" type="video/mp4" allowscriptaccess="always" allowfullscreen="true" src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" controls></video>
+        <ul>
+			<li><a href="">Home</a></li>
+			<li><a href="">About us</a></li>
+	    	<li><a href="">Contact us</a></li>
+		</ul>
+	</nav>
+	<h2>3 random videos</h2>
+		<video width="220" height="150" controls>
+        <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4" allowscriptaccess="always" allowfullscreen="true" >
+        </video>	
+		<video width="220" height="150" controls>
+        <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" type="video/mp4" allowscriptaccess="always" allowfullscreen="true" >
+        </video>
+		<video width="220" height="150" controls>
+        <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" type="video/mp4" allowscriptaccess="always" allowfullscreen="true" >
+        </video>
 		
 		<!-- the entire body must be written by student -->
 	    <script type="text/javascript" src="./script.js">
